Resource fixes for Windows ports. - Bochs for wxMSW: fixed duplicate value caused by manifest. - Bochs for wxMSW: fixed resource file dependencies. - Include gui debugger resources only when enabled.

--- a/bochs/Makefile.in
+++ b/bochs/Makefile.in
@@ -369,7 +369,7 @@ libbochs.a:
 	$(RANLIB) libbochs.a
 
 # for wxWidgets port, on win32 platform
-wxbochs_resources.o: wxbochs.rc
+wxbochs_resources.o: wxbochs.rc win32res.rc bxversion.rc
 	windres $(srcdir)/wxbochs.rc -o $@ --include-dir=`@WX_CONFIG@ --prefix`/include
 
 # for win32 gui
